k8slearn/9.Kubernetes 监控/9.4.Alertmanager/Manifest/alertmanager-svc.yaml
# alertmanager-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitor
  labels:
    app: alertmanager
spec:
  selector:
    app: alertmanager
  type: NodePort
  ports:
    - name: web
      port: 9093
      targetPort: http
      nodePort: 31194
