k8slearn/9.Kubernetes 监控/9.4.Alertmanager/Manifest/promoter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promoter
  namespace: monitor
  labels:
    app: promoter
spec:
  selector:
    matchLabels:
      app: promoter
  template:
    metadata:
      labels:
        app: promoter
    spec:
      volumes:
        - name: promotercfg
          configMap:
            name: promoter-conf
      containers:
        - name: promoter
          image: cnych/promoter:main
          imagePullPolicy: IfNotPresent
          args:
            - '--config.file=/etc/promoter/config.yaml'
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: '/etc/promoter'
              name: promotercfg
---
apiVersion: v1
kind: Service
metadata:
  name: promoter
  namespace: monitor
  labels:
    app: promoter
spec:
  selector:
    app: promoter
  ports:
    - port: 8080
