k8slearn/9.Kubernetes 监控/9.4.Alertmanager/Manifest/alertmanager-ingress.yaml
# alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitor
spec:
  ingressClassName: nginx
  rules:
    - host: alertmanager.qikqiak.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alertmanager
                port:
                  number: 9093
